clapi_macros/test_suite/tests/ui/fail/misplace_attribute/misplace_arg.stderr
error: custom attribute panicked
 --> $DIR/misplace_arg.rs:3:1
  |
3 | #[arg(name)]
  | ^^^^^^^^^^^^
  |
  = help: message: `arg` should be placed after a `command` or `subcommand` attribute
